--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/square"
-        app:layout_constraintTop_toBottomOf="@+id/imgTitle"
+        app:layout_constraintTop_toBottomOf="@+id/imgView"
         />
 
     <ImageView
-        android:id="@+id/imgTitle"
+        android:id="@+id/imgView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/imgNext"
